# gl-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  Dependency.cmake  README.md  dependencies.cmake  external.cmake  main.cpp
example/: CMakeLists.txt  main.cpp
shader/: box.frag  box.vert
src/: buffer.cpp  buffer.h  common.h  context.cpp  context.h  main.cpp  main.cpp.bak  shaderProg.cpp  shaderProg.h  texture.cpp  texture.h  vertexLayout.cpp  vertexLayout.h
submodules/: CMakeLists.txt
